fix: cluster-resources bugfix
