# bcs-services/cluster-resources/pkg/handler/resource/discoverycache.go
@@ -17,11 +17,9 @@ package resource
 import (
 	"context"
 
-	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/common/ctxkey"
 	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/common/errcode"
+	conf "github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/config"
 	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/i18n"
-	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/iam"
-	clusterAuth "github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/iam/perm/resource/cluster"
 	res "github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/resource"
 	"github.com/Tencent/bk-bcs/bcs-services/cluster-resources/pkg/util/errorx"
 	clusterRes "github.com/Tencent/bk-bcs/bcs-services/cluster-resources/proto/cluster-resources"
@@ -31,13 +29,7 @@ import (
 func (h *Handler) InvalidateDiscoveryCache(
 	ctx context.Context, req *clusterRes.InvalidateDiscoveryCacheReq, _ *clusterRes.CommonResp,
 ) error {
-	permCtx := clusterAuth.NewPermCtx(
-		ctx.Value(ctxkey.UsernameKey).(string), req.ProjectID, req.ClusterID,
-	)
-	// TODO 支持 AdminToken，如果有 AdminToken 则不检查集群管理权限
-	if allow, err := iam.NewClusterPerm(req.ProjectID).CanManage(permCtx); err != nil {
-		return err
-	} else if !allow {
+	if conf.G.Basic.CacheToken == "" || req.AuthToken != conf.G.Basic.CacheToken {
 		return errorx.New(errcode.NoIAMPerm, i18n.GetMsg(ctx, "无指定操作权限"))
 	}
 
