# bcs-services/cluster-resources/proto/cluster-resources/cluster-resources.pb.validate.go
@@ -4134,6 +4134,8 @@ func (m *InvalidateDiscoveryCacheReq) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
+	// no validation rules for AuthToken
+
 	if len(errors) > 0 {
 		return InvalidateDiscoveryCacheReqMultiError(errors)
 	}
